removing vulnerabilities, adding local and home access in electron with local:// and home:// , adjusting title in electorn, password encription changes in electron

--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -28,7 +28,7 @@
     $(document).ready(function() {
       Mudslinger.init();
     });
-
+    console.log(typeof require)
     if (typeof require !== 'undefined') {
       const {ipcRenderer} = require('electron');
       console.log("IPC_RENDERER: "+!!ipcRenderer)
