aggiunto nuovo tipo di evento per comando dato corretto un exploit di script injection trigger temporanei fix a resize del mapperWindow.ts

--- a/browser/src/html/template.html
+++ b/browser/src/html/template.html
@@ -209,7 +209,7 @@
             </ul>
           </li>
           <li type="separator"></li>
-          <li data-option-name="layouteditor">Disposizione schermo (-)</li>
+          <li data-option-name="layoutEditor">Disposizione schermo</li>
           <li type="separator"></li>
           <li data-option-name="mapper">Mapper</li>
         </ul>
